[metadata]
name = jira2json
version = attr: jira2json.__init__.__version__
description = Dump JIRA issues to a dictionary / JSON.
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Software Development :: Bug Tracking
    Typing :: Typed

[options]
packages = jira2json
install_requires =
    requests ~= 2.30

[options.package_data]
jira2json = "py.typed"

[options.entry_points]
console_scripts =
    jira2json = jira2json.__main__:_main

[options.extras_require]
dotenv =
    python-dotenv
dev =
    types-requests
    coverage
