[metadata]
name = jira2json
version = attr: jira2json.__init__.__version__
description = Dump JIRA issues to a dictionary / JSON.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bharel/jira_to_json
download_url = https://pypi.org/project/jira2json/#files
author = Bar Harel
maintainer = Bar Harel
license = MIT License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Site Management
    Topic :: Software Development :: Bug Tracking
    Typing :: Typed

[options]
packages = jira2json
install_requires =
    requests ~= 2.30

[options.package_data]
jira2json = "py.typed"

[options.entry_points]
console_scripts =
    jira2json = jira2json.__main__:_main

[options.extras_require]
dotenv =
    python-dotenv
dev =
    types-requests
    coverage
